--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "@mui/x-date-pickers": "^7.22.1",
     "@supabase/supabase-js": "^2.45.6",
+    "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
